tests222/tests/test17.out
lli: <stdin>:1:1: error: expected top-level entity
line 1: prototype mismatch, function printi expects arguments INT
^
